fix: プレースホルダーを架空のホール名に変更

--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label>ホール名</label>
-                        <input type="text" id="hallName" placeholder="例: 楽園町田">
+                        <input type="text" id="hallName" placeholder="例: パチスロプラザ">
                     </div>
                     <div class="form-group">
                         <label>台番号</label>
-                        <input type="text" id="machineNumber" placeholder="例: 512">
+                        <input type="text" id="machineNumber" placeholder="例: 123">
                     </div>
                 </div>
                 <div class="modal-actions">
